--- a/Content/app.css
+++ b/Content/app.css
@@ -241,3 +241,64 @@ div#skype{
 	order: 3;
 	text-align: center;
 }
+img.banner {
+    opacity: 0.6;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+}
+
+img.banner:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+section.box{
+			/* STEP 2: Set the flex container for the columns */
+			display: flex;
+			flex-direction: row;
+			flex-grow: 1;
+			padding-bottom: 100px;
+			padding-top: 25px;
+			margin: 0;
+			padding-right: 20px;
+}
+
+div#project1{
+	order: 1;
+	text-align: center;
+	flex-grow: 1;
+}
+div#project2{
+	order: 2;
+	text-align: center;
+	flex-grow: 1;
+}
+div#project3{
+	order: 3;
+	text-align: center;
+	flex-grow: 1;
+}
+
+
+
+form.form{
+	padding-top: 20%;
+}
+footer {
+	text-shadow: 0px 1.5px 1.5px #800000;
+  background-position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+
+
+.fa-facebook ,.fa-instagram,.fa-twitter,.fa-google{
+  color: black;
+}
+.fa-facebook:hover{color: #FFCC00;}
+.fa-instagram:hover{color: #FFCC00;}
+.fa-twitter:hover{color: #FFCC00;}
+.fa-google:hover{color: #FFCC00;}
