--- a/Content/app.css
+++ b/Content/app.css
@@ -1,6 +1,8 @@
 /*app.css> Hanvinder Singh Rai> Portfolio> Css style for all the three pages of website*/
 
 /*custum stylesheet*/
+
+/*navigation change*/
 a.navbar-brand{
 	padding: 0 0 0 5%;
 	margin: 0;
@@ -130,7 +132,7 @@ footer{
   color: #ffcc00;
 }
 
-
+/*Headings and main styling*/
 h2#contact{
 	padding-left: 70%;
 	padding-top: 5%;
@@ -167,23 +169,19 @@ article.profile{
 	background-size: cover;
 	height: 700px;	
 }
-
+ /*body sstyling with background images*/
 body.rai{
 	background: url(../images/honey.png)no-repeat center center fixed;
 	background-size: cover;
-	
-	/*background-position: fixed;*/
 	height: 300px;
 }
 
 body.project{
 	background: url(../images/hanvinder1.jpg)no-repeat center center fixed;
 	background-size: cover;
-	
-	/*background-position: fixed;*/
 	height: 300px;
 }
-
+/*main styling*/
 main.container{
 	border:  1px solid #FFCC00;
 	background-color: rgba( 211,211,211,0.8);
@@ -201,7 +199,6 @@ main.container p{
 
 main.container1{
 	border: 1px solid #000;
-	/*height: 600px;*/
 	background: lightgray;
 	padding: 0 300px;
 	margin-top: 200px;
@@ -209,16 +206,14 @@ main.container1{
 
 main.container3{
 	border: 1px solid #000;
-	/*height: 600px;*/
 	background: lightgray;
 	padding: 0 300px;
 	margin-top: 200px;
 	height: 600px;
 }
 
-
+/*using flexbox in contact page*/
 section.contact{
-			/* STEP 2: Set the flex container for the columns */
 			display: flex;
 			flex-direction: row;
 			flex-grow: 1;
@@ -241,18 +236,20 @@ div#skype{
 	order: 3;
 	text-align: center;
 }
+
+/*Project Images hover opacity*/
 img.banner {
     opacity: 0.6;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
+    filter: alpha(opacity=40); 
 }
 
 img.banner:hover {
     opacity: 1.0;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
+    filter: alpha(opacity=100); 
 }
 
+/*styling project template*/
 section.box{
-			/* STEP 2: Set the flex container for the columns */
 			display: flex;
 			flex-direction: row;
 			flex-grow: 1;
@@ -283,7 +280,8 @@ div#project3{
 form.form{
 	padding-top: 20%;
 }
-footer {
+/*Footer styling*/
+*footer {
 	text-shadow: 0px 1.5px 1.5px #800000;
   background-position: fixed;
   right: 0;
