--- a/Content/app.css
+++ b/Content/app.css
@@ -1,12 +1,145 @@
 /*app.css> Hanvinder Singh Rai> Portfolio> Css style for all the three pages of website*/
 
 /*custum stylesheet*/
-
-/*navigation change*/
 a.navbar-brand{
 	padding: 0 0 0 5%;
 	margin: 0;
 }
+
+/*Heading styling*/
+h2#contact{
+	padding-left: 70%;
+	padding-top: 5%;
+	color: #FFCC00;
+	font-size: 5vw;
+	text-shadow: 0px 1.5px 1.5px #800000;
+}
+
+h1#name{
+	text-align: center;
+	color: #FFCC00;
+	text-shadow: 0px 1.5px 1.5px #800000;
+}
+h2#touch{
+	text-align: center;
+	text-shadow: 0px 1.5px 1.5px #800000;
+}
+
+h2#project{
+	text-shadow: 0px 1.5px 1.5px #800000;
+	font-size: 4vw;
+	color: #FFCC00;
+}
+h1#work{
+	text-shadow: 0px 1.5px 1.5px #800000;
+	color: #FFCC00;
+	text-decoration: underline;
+	margin-right: 10px;
+}
+article.profile{
+	margin-top: -50px;
+	background-image: url(../images/Hanvinder.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 700px;	
+}
+
+/*body background image and styling*/
+body.rai{
+	background: url(../images/honey.png)no-repeat center center fixed;
+	background-size: cover;
+	height: 300px;
+}
+
+body.project{
+	background: url(../images/hanvinder1.jpg)no-repeat center center fixed;
+	background-size: cover;
+	height: 300px;
+}
+
+/*Main container styling*/
+main.container{
+	border:  1px solid #FFCC00;
+	background-color: rgba( 211,211,211,0.8);
+	float: right;
+	width: 40%;
+	height: 550px;
+	margin: 40px 50px;
+}
+main.container p{
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif sans-serif;
+	font-size: 1.1em;
+	line-height: 1.5;
+	font-weight: normal;
+}
+
+main.container1{
+	border: 1px solid #000;
+	background: lightgray;
+	padding: 0 300px;
+	margin-top: 200px;
+}
+
+main.container3{
+	border: 1px solid #000;
+	background: lightgray;
+	padding: 0 300px;
+	margin-top: 200px;
+	height: 600px;
+}
+
+/*contact styling*/
+section.contact{
+			display: flex;
+			flex-direction: row;
+			flex-grow: 1;
+			padding-bottom: 100px;
+			padding-top: 25px;
+}
+
+div#mobile{
+	order: 1;
+	flex-basis: 50vw;
+	text-align: center;
+}
+div#email{
+	flex-basis: 0;
+	order: 2;
+	text-align: center;
+}
+div#skype{
+	flex-basis: 50vw;
+	order: 3;
+	text-align: center;
+}
+
+/*
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+color: #000;  
+}  
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >   
+ a:hover, .navbar-default .navbar-nav > .active > a:focus {
+color: #42100d; 
+}
+
+
+ .nav > li > a:hover,
+ .nav > li > a:focus 
+  .nav > li > a:active {
+    text-decoration: none;
+    background-color: #e7af3e; 
+  }
+
+
+  .navbar-default .navbar-nav > li > a {
+   color: #e7af3e; 
+    }
+.navbar-default {
+    background-color: #469978;
+}
+	*/
+	/* Footer styling */
 footer{
 	text-align: center;
 	background-color: #68a78d;
@@ -17,6 +150,7 @@ footer{
   background-image: linear-gradient(to bottom, #88baa5 0%, #68a78d 100%);
   background-repeat: repeat-x;
 }
+/*Navigation styling*/
 .navbar-default {
   background-color: #58967c;
   border-color: #4c816b;
@@ -132,112 +266,7 @@ footer{
   color: #ffcc00;
 }
 
-/*Headings and main styling*/
-h2#contact{
-	padding-left: 70%;
-	padding-top: 5%;
-	color: #FFCC00;
-	font-size: 5vw;
-	text-shadow: 0px 1.5px 1.5px #800000;
-}
-
-h1#name{
-	text-align: center;
-	color: #FFCC00;
-	text-shadow: 0px 1.5px 1.5px #800000;
-}
-h2#touch{
-	text-align: center;
-	text-shadow: 0px 1.5px 1.5px #800000;
-}
-
-h2#project{
-	text-shadow: 0px 1.5px 1.5px #800000;
-	font-size: 4vw;
-	color: #FFCC00;
-}
-h1#work{
-	text-shadow: 0px 1.5px 1.5px #800000;
-	color: #FFCC00;
-	text-decoration: underline;
-	margin-right: 10px;
-}
-article.profile{
-	margin-top: -50px;
-	background-image: url(../images/Hanvinder.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 700px;	
-}
- /*body sstyling with background images*/
-body.rai{
-	background: url(../images/honey.png)no-repeat center center fixed;
-	background-size: cover;
-	height: 300px;
-}
-
-body.project{
-	background: url(../images/hanvinder1.jpg)no-repeat center center fixed;
-	background-size: cover;
-	height: 300px;
-}
-/*main styling*/
-main.container{
-	border:  1px solid #FFCC00;
-	background-color: rgba( 211,211,211,0.8);
-	float: right;
-	width: 40%;
-	height: 550px;
-	margin: 40px 50px;
-}
-main.container p{
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif sans-serif;
-	font-size: 1.1em;
-	line-height: 1.5;
-	font-weight: normal;
-}
-
-main.container1{
-	border: 1px solid #000;
-	background: lightgray;
-	padding: 0 300px;
-	margin-top: 200px;
-}
-
-main.container3{
-	border: 1px solid #000;
-	background: lightgray;
-	padding: 0 300px;
-	margin-top: 200px;
-	height: 600px;
-}
-
-/*using flexbox in contact page*/
-section.contact{
-			display: flex;
-			flex-direction: row;
-			flex-grow: 1;
-			padding-bottom: 100px;
-			padding-top: 25px;
-}
-
-div#mobile{
-	order: 1;
-	flex-basis: 50vw;
-	text-align: center;
-}
-div#email{
-	flex-basis: 0;
-	order: 2;
-	text-align: center;
-}
-div#skype{
-	flex-basis: 50vw;
-	order: 3;
-	text-align: center;
-}
-
-/*Project Images hover opacity*/
+/*Project template styling*/
 img.banner {
     opacity: 0.6;
     filter: alpha(opacity=40); 
@@ -247,8 +276,31 @@ img.banner:hover {
     opacity: 1.0;
     filter: alpha(opacity=100); 
 }
+/*
+.box {
+ 	display: flex;
+	flex-direction: row;
 
-/*styling project template*/
+}
+
+img#temp1 {
+  padding: 5px;
+  margin-top: 10px;
+  line-height: 350px;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+section.box1{
+			display: flex;
+			flex-direction: row;
+			flex-grow: 1;
+			padding-bottom: 100px;
+			padding-top: 25px;
+}*/
+
+/*Flexbox styling*/
 section.box{
 			display: flex;
 			flex-direction: row;
@@ -281,7 +333,7 @@ form.form{
 	padding-top: 20%;
 }
 /*Footer styling*/
-*footer {
+footer {
 	text-shadow: 0px 1.5px 1.5px #800000;
   background-position: fixed;
   right: 0;
@@ -291,7 +343,23 @@ form.form{
   background-color: #efefef;
   text-align: center;
 }
-
+/*
+p.social {
+	margin: 0;
+	top: 100px;
+	right: 0;
+	padding:0 44% 0 44%;
+	font-family: socialicoregular;
+	font-size: 60px;
+	color: white;
+	height: 100px;
+	width: 250px;
+	position: center;
+	
+}
+p.social:hover{
+	color: #ffcc00;
+}*/
 
 .fa-facebook ,.fa-instagram,.fa-twitter,.fa-google{
   color: black;
