--- a/Content/app.css
+++ b/Content/app.css
@@ -369,7 +369,7 @@ p.social:hover{
 .fa-twitter:hover{color: #FFCC00;}
 .fa-google:hover{color: #FFCC00;}
 
-/* FAB styling 
+ FAB styling 
 #container {
   position: fixed;
   right: 20px;
